# wg_flutter_linux

./: README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
lib/: wg_flutter_linux.dart  wg_flutter_linux_method_channel.dart  wg_flutter_linux_platform_interface.dart  wireguard.dart
linux/: CMakeLists.txt  libwg_quick.h  wg_flutter_linux_plugin.cc  wg_flutter_linux_plugin_private.h
linux/go_wireguard/: go.mod  go.sum  wg_quick.go
linux/include/wg_flutter_linux/: wg_flutter_linux_plugin.h
linux/test/: wg_flutter_linux_plugin_test.cc
